--- a/index.html
+++ b/index.html
@@ -24,8 +24,18 @@
     <!------------------------------>
     <!-- Your HTML Layout go here -->
     <!------------------------------>
-    <!-- Stuff for body goes here -->
 
+    <div class="px-4 py-5 my-5 text-center">
+        <img class="d-block mx-auto mb-4" src="images/hound.png" alt="" width="128" height="128">
+        <h1 class="display-5 fw-bold">DealHound</h1>
+        <div class="col-lg-6 mx-auto">
+            <p class="lead mb-4">Save time and money with our easy and simple deal hunting companion.</p>
+            <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+                <button type="button" class="btn btn-success btn-lg px-4 gap-3">Get Started</button>
+                <button type="button" class="btn btn-outline-secondary btn-lg px-4">About Us</button>
+            </div>
+        </div>
+    </div>
 
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
