Update search icon and remove items from nav bar

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <!-- Your HTML Layout go here -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-success">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"
-          ><img src="images/hound.png" height="36" /> DealHound</a
-        >
+        <a class="navbar-brand" href="#">
+          <img src="./images/hound.png" height="36" alt="" /> DealHound
+        </a>
         <button
           class="navbar-toggler"
           type="button"
@@ -52,28 +52,7 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Browse</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                More
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li>
-                  <hr class="dropdown-divider" />
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </li>
-              </ul>
+              <a class="nav-link" href="#">Login/ Signup</a>
             </li>
             <li class="nav-item">
               <a class="nav-link disabled" aria-disabled="true"
@@ -85,43 +64,60 @@
             <input
               class="form-control me-2"
               type="search"
-              placeholder="Search"
+              placeholder="Search flyers or items"
               aria-label="Search"
             />
-            <button class="btn btn-success-light" type="submit">Search</button>
+            <button class="btn btn-success-light" type="submit">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                width="28"
+                height="28"
+                stroke-width="1"
+              >
+                <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0"></path>
+                <path d="M21 21l-6 -6"></path>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
     </nav>
     <!------------------------------>
 
-<<<<<<< HEAD
     <div class="px-4 py-5 my-5 text-center">
-        <img class="d-block mx-auto mb-4" src="images/hound.png" alt="" width="128" height="128">
-        <h1 class="display-5 fw-bold">DealHound</h1>
-        <div class="col-lg-6 mx-auto">
-            <p class="lead mb-4">Save time and money with our easy and simple deal hunting companion.</p>
-            <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                <button type="button" class="btn btn-success btn-lg px-4 gap-3">Get Started</button>
-                <button type="button" class="btn btn-outline-secondary btn-lg px-4">About Us</button>
-            </div>
+      <img
+        class="d-block mx-auto mb-4"
+        src="images/hound.png"
+        alt=""
+        width="128"
+        height="128"
+      />
+      <h1 class="display-5 fw-bold">DealHound</h1>
+      <div class="col-lg-6 mx-auto">
+        <p class="lead mb-4">
+          Save time and money with our easy and simple deal hunting companion.
+        </p>
+        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+          <button type="button" class="btn btn-success btn-lg px-4 gap-3">
+            Get Started
+          </button>
+          <button type="button" class="btn btn-outline-secondary btn-lg px-4">
+            About Us
+          </button>
         </div>
+      </div>
     </div>
 
-=======
->>>>>>> c448be507c0b736550d9ac9214c1a13525f21bc1
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
     <!---------------------------------------------->
 
     <!-- Link to scripts of your own -->
     <!-- <script src="./scripts/script.js"></script> -->
-<<<<<<< HEAD
-
-</body>
-
-</html>
-=======
   </body>
 </html>
->>>>>>> c448be507c0b736550d9ac9214c1a13525f21bc1
