--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
     <!-- Other libraries go here -->
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=person" />
     <!-- Link to styles of your own -->
     <!-- <link rel="stylesheet" href="./styles/style.css"> -->
 </head>
@@ -89,7 +89,7 @@
     <!-- Link to scripts of your own -->
     <!-- <script src="./scripts/script.js"></script> -->
 
-<footer class="navbar sticky-bottom bg-body-tertiary">
+<footer class="navbar fixed-bottom bg-body-tertiary">
         <div class="container-fluid d-flex justify-content-center">
             <div class="d-flex justify-content-center" id="navbarNavAltMarkup">
                 <div class="d-flex">
