--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
     <!-- Other libraries go here -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=person" />
     <!-- Link to styles of your own -->
     <!-- <link rel="stylesheet" href="./styles/style.css"> -->
 </head>
@@ -96,8 +95,10 @@
                     <a class="nav-link" href="#">Home</a>
                     <a class="nav-link active px-3" aria-current="page" href="#">Lists</a>
                     <a class="nav-link" href="#">Features</a>
-                    <a class="nav-link px-3" href="#">Profile</a>
-                    <a class="nav-link">Settings</a>
+                    <a class="nav-link px-3" href="#">Profile<span class="material-symbols-outlined">
+                        person
+                    </span></a>
+                    <a class="nav-link"></a>
                 </div>
             </div>
         </div>
