--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-          <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -47,13 +47,12 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Login/ Signup</a>
+              <a class="nav-link" href="#">Shopping List</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" aria-disabled="true"
-                >Shopping List</a
-              >
+              <a class="nav-link" href="#">Login/ Signup</a>
             </li>
+            
           </ul>
           <form class="d-flex" role="search">
             <input
