Add favourite icon

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                   stroke="currentColor"
                   stroke-linecap="round"
                   stroke-linejoin="round"
-                  width="20"
-                  height="20"
+                  width="28"
+                  height="28"
                   stroke-width="1.5"
                 >
                   <path
@@ -91,6 +91,26 @@
                   <path d="M12 16l1 1l3 -3"></path>
                 </svg>
                 Shopping List
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  width="28"
+                  height="28"
+                  stroke-width="1"
+                >
+                  <path
+                    d="M19.5 12.572l-7.5 7.428l-7.5 -7.428a5 5 0 1 1 7.5 -6.566a5 5 0 1 1 7.5 6.572"
+                  ></path>
+                </svg>
+                Favourites
               </a>
             </li>
             <li class="nav-item">
