--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
     </div>
 
     <div class="container">
-      <div class="row">
-        <div class="col-md-3">
+      <div class="row d-flex justify-content-center">
+        <div class="col-md-3 mb-4">
           <div class="card" style="width: 18rem">
             <img
               src="./images/chicken.png"
@@ -202,16 +202,17 @@
             />
             <div class="card-body">
               <h5 class="card-title">Chicken</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
+              <ul class="card-text">
+                <li>Retail Store Location: Save on Foods</li>
+                <li>Original Price: $7.99 per lb</li>
+                <li>Deal Offer: $5.99 per lb</li>
+              </ul>
               <a href="#" class="btn btn-primary">Get Deal NOW!!!</a>
             </div>
           </div>
         </div>
 
-        <div class="col-md-3">
+        <div class="col-md-3 mb-4">
           <div class="card" style="width: 18rem">
             <img
               src="./images/potato.png"
@@ -221,16 +222,17 @@
             />
             <div class="card-body">
               <h5 class="card-title">Potatoes</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
+              <ul class="card-text">
+                <li>Retail Store Location: Walmart</li>
+                <li>Original Price: $2.99 per bag</li>
+                <li>Deal Offer: $2.49 per bag</li>
+              </ul>
               <a href="#" class="btn btn-primary">Get Deal NOW!!!</a>
             </div>
           </div>
         </div>
 
-        <div class="col-md-3">
+        <div class="col-md-3 mb-4">
           <div class="card" style="width: 18rem">
             <img
               src="./images/milk.png"
@@ -240,16 +242,17 @@
             />
             <div class="card-body">
               <h5 class="card-title">Milk</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
+              <ul class="card-text">
+                <li>Retail Store Location: Costco</li>
+                <li>Original Price: $2.19 per lb</li>
+                <li>Deal Offer: $1.99 per gallon</li>
+              </ul>
               <a href="#" class="btn btn-primary">Get Deal NOW!!!</a>
             </div>
           </div>
         </div>
 
-        <div class="col-md-3">
+        <div class="col-md-3 mb-4">
           <div class="card" style="width: 18rem">
             <img
               src="./images/cabbage.png"
@@ -259,10 +262,11 @@
             />
             <div class="card-body">
               <h5 class="card-title">Cabbage</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
+              <ul class="card-text">
+                <li>Retail Store Location: Urban Fare </li>
+                <li>Original Price: $3.99 each</li>
+                <li>Deal Offer: $3.49 each</li>
+              </ul>
               <a href="#" class="btn btn-primary">Get Deal NOW!!!</a>
             </div>
           </div>
