Modify category of information

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             <div class="card-body">
               <h5 class="card-title">Chicken</h5>
               <ul class="card-text">
-                <li>Retail Store Location: Save on Foods</li>
+                <li>Store Location: Save on Foods</li>
                 <li>Original Price: $7.99 per lb</li>
                 <li>Deal Offer: $5.99 per lb</li>
               </ul>
@@ -223,7 +223,7 @@
             <div class="card-body">
               <h5 class="card-title">Potatoes</h5>
               <ul class="card-text">
-                <li>Retail Store Location: Walmart</li>
+                <li>Store Location: Walmart</li>
                 <li>Original Price: $2.99 per bag</li>
                 <li>Deal Offer: $2.49 per bag</li>
               </ul>
@@ -243,7 +243,7 @@
             <div class="card-body">
               <h5 class="card-title">Milk</h5>
               <ul class="card-text">
-                <li>Retail Store Location: Costco</li>
+                <li>Store Location: Costco</li>
                 <li>Original Price: $2.19 per lb</li>
                 <li>Deal Offer: $1.99 per gallon</li>
               </ul>
@@ -263,7 +263,7 @@
             <div class="card-body">
               <h5 class="card-title">Cabbage</h5>
               <ul class="card-text">
-                <li>Retail Store Location: Urban Fare </li>
+                <li>Store Location: Urban Fare </li>
                 <li>Original Price: $3.99 each</li>
                 <li>Deal Offer: $3.49 each</li>
               </ul>
