--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
+
     <!-- Other libraries go here -->
     <!-- Link to styles of your own -->
     <!-- <link rel="stylesheet" href="./styles/style.css"> -->
@@ -31,42 +32,54 @@
     <!-- Your HTML Layout go here -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-success">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <img src="./images/hound.png" height="36" alt="" /> DealHound
+        <!-- Brand -->
+        <a class="navbar-brand active" href="#">
+          <img src="./images/hound.png" height="36" alt="" />
         </a>
+        <form class="d-flex me-auto" role="search">
+          <input
+            class="form-control me-2"
+            type="search"
+            placeholder="Search flyers or items"
+            aria-label="Search"
+          />
+          <button class="btn btn-success-light" type="submit">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="white"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              width="28"
+              height="28"
+              stroke-width="1.5"
+            >
+              <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0"></path>
+              <path d="M21 21l-6 -6"></path>
+            </svg>
+          </button>
+        </form>
+
+        <!-- Toggler button for smaller screens-->
         <button
           class="navbar-toggler"
           type="button"
           data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#"
-                ><svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 24 24"
-                  fill="none"
-                  stroke="currentColor"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  width="28"
-                  height="28"
-                  stroke-width="1"
-                >
-                  <path d="M5 12l-2 0l9 -9l9 9l-2 0"></path>
-                  <path d="M5 12v7a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-7"></path>
-                  <path d="M10 12h4v4h-4z"></path>
-                </svg>
-                Home
-              </a>
-            </li>
+
+        <!-- Collapsible menu-->
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarNav"
+        >
+          <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link" href="#">
                 <svg
@@ -132,34 +145,10 @@
                     d="M6.168 18.849a4 4 0 0 1 3.832 -2.849h4a4 4 0 0 1 3.834 2.855"
                   ></path>
                 </svg>
-                Sign in</a
-              >
+                Sign in
+              </a>
             </li>
           </ul>
-          <form class="d-flex" role="search">
-            <input
-              class="form-control me-2"
-              type="search"
-              placeholder="Search flyers or items"
-              aria-label="Search"
-            />
-            <button class="btn btn-success-light" type="submit">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                width="20"
-                height="20"
-                stroke-width="1.5"
-              >
-                <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0"></path>
-                <path d="M21 21l-6 -6"></path>
-              </svg>
-            </button>
-          </form>
         </div>
       </div>
     </nav>
