--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           class="collapse navbar-collapse justify-content-end"
           id="navbarNav"
         >
-          <ul class="navbar-nav">
+          <ul class="navbar-nav ms-auto text-end">
             <li class="nav-item">
               <a class="nav-link" href="#">
                 <svg
@@ -252,7 +252,7 @@
             <div class="card-body">
               <h5 class="card-title">Cabbage</h5>
               <ul class="card-text">
-                <li>Store Location: Urban Fare </li>
+                <li>Store Location: Urban Fare</li>
                 <li>Original Price: $3.99 each</li>
                 <li>Deal Offer: $3.49 each</li>
               </ul>
