Add splash background and splash images

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Other libraries go here -->
 
     <!-- Link to styles of your own -->
-    <!-- <link rel="stylesheet" href="./styles/style.css"> -->
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
@@ -70,7 +70,7 @@
     </nav>
     <!------------------------------>
 
-    <div class="px-4 py-5 my-5 text-center">
+    <div class="px-4 py-5 my-5 text-center splash">
         <img class="d-block mx-auto mb-4" src="images/hound.png" alt="" width="128" height="128">
         <h1 class="display-5 fw-bold">DealHound</h1>
         <div class="col-lg-6 mx-auto">
