Fix hero & adjust item cards

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="container-fluid">
             <!-- Brand -->
             <a class="navbar-brand active" href="#">
-                <img src="./images/hound.png" height="36" alt="" />
+                <img src="./images/hound_white.png" height="36" alt="" />
             </a>
             <form class="d-flex me-auto" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search flyers or items"
@@ -98,18 +98,20 @@
     </nav>
     <!------------------------------>
 
-    <div class="px-4 py-5 my-5 text-center">
-        <img class="d-block mx-auto mb-4" src="images/hound.png" alt="" width="128" height="128">
-        <h1 class="display-5 fw-bold">DealHound</h1>
+    <!-- <div class="px-4 py-5 my-5 text-center "
+        style="background-image: url('images/splash2.jpg'); background-size: cover; background-position: center;"> -->
+    <div class="mb-5 py-5 text-center splash">
+        <img class="d-block mx-auto mb-4" src="images/hound_white.png" alt="" width="128" height="128">
+        <h1 class="display-5 text-white fw-bold">DealHound</h1>
         <div class="col-lg-6 mx-auto">
-            <p class="lead mb-4">
+            <p class="lead mb-4 text-white">
                 Save time and money with our easy and simple deal hunting companion.
             </p>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
                 <button type="button" class="btn btn-success btn-lg px-4 gap-3">
                     Get Started
                 </button>
-                <button type="button" class="btn btn-outline-secondary btn-lg px-4">
+                <button type="button" class="btn btn-light btn-lg px-4">
                     About Us
                 </button>
             </div>
@@ -123,13 +125,15 @@
                     <img src="./images/chicken.png" class="card-img-top" alt="..."
                         style="height: 200px; width: 100%; object-fit: cover" />
                     <div class="card-body">
-                        <h5 class="card-title">Chicken</h5>
+                        <h5 class="card-title text-center">Chicken</h5>
                         <ul class="card-text">
                             <li>Store Location: Save on Foods</li>
                             <li>Original Price: $7.99 per lb</li>
                             <li>Deal Offer: $5.99 per lb</li>
                         </ul>
-                        <a href="#" class="btn btn-primary">Get Deal NOW!!!</a>
+                        <div class="d-flex justify-content-center">
+                            <a href="#" class="btn btn-success">Buy Now</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -139,13 +143,15 @@
                     <img src="./images/potato.png" class="card-img-top" alt="..."
                         style="height: 200px; width: 100%; object-fit: cover" />
                     <div class="card-body">
-                        <h5 class="card-title">Potatoes</h5>
+                        <h5 class="card-title text-center">Potatoes</h5>
                         <ul class="card-text">
                             <li>Store Location: Walmart</li>
                             <li>Original Price: $2.99 per bag</li>
                             <li>Deal Offer: $2.49 per bag</li>
                         </ul>
-                        <a href="#" class="btn btn-primary">Get Deal NOW!!!</a>
+                        <div class="d-flex justify-content-center">
+                            <a href="#" class="btn btn-success">Buy Now</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -155,13 +161,15 @@
                     <img src="./images/milk.png" class="card-img-top" alt="..."
                         style="height: 200px; width: 100%; object-fit: cover" />
                     <div class="card-body">
-                        <h5 class="card-title">Milk</h5>
+                        <h5 class="card-title text-center">Milk</h5>
                         <ul class="card-text">
                             <li>Store Location: Costco</li>
                             <li>Original Price: $2.19 per lb</li>
                             <li>Deal Offer: $1.99 per gallon</li>
                         </ul>
-                        <a href="#" class="btn btn-primary">Get Deal NOW!!!</a>
+                        <div class="d-flex justify-content-center">
+                            <a href="#" class="btn btn-success">Buy Now</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -171,13 +179,15 @@
                     <img src="./images/cabbage.png" class="card-img-top" alt="..."
                         style="height: 200px; width: 100%; object-fit: cover" />
                     <div class="card-body">
-                        <h5 class="card-title">Cabbage</h5>
+                        <h5 class="card-title text-center">Cabbage</h5>
                         <ul class="card-text">
                             <li>Store Location: Urban Fare </li>
                             <li>Original Price: $3.99 each</li>
                             <li>Deal Offer: $3.49 each</li>
                         </ul>
-                        <a href="#" class="btn btn-primary">Get Deal NOW!!!</a>
+                        <div class="d-flex justify-content-center">
+                            <a href="#" class="btn btn-success">Buy Now</a>
+                        </div>
                     </div>
                 </div>
             </div>
