--- a/index.html
+++ b/index.html
@@ -111,9 +111,8 @@
                 <button type="button" class="btn btn-success btn-lg px-4 gap-3">
                     Get Started
                 </button>
-                <button type="button" class="btn btn-light btn-lg px-4">
-                    About Us
-                </button>
+
+                <a class="btn btn-light btn-lg px-4" href="./aboutus.html">About Us</a>
             </div>
         </div>
     </div>
