Update main header

--- a/aboutus.html
+++ b/aboutus.html
@@ -97,7 +97,7 @@
         </div>
     </nav>
     <main id="aboutus" class="mx-auto">
-        <h1>Our Mission</h1>
+        <h1 id="mission-header" class="text-center text-success fw-bold mb-4">Finding deals for you</h1>
         <p>DealHound simplifies the grocery shopping experience by collecting and curating
             deals from multiple retailers in one place. Add your grocery list and preferences, and our app will ensure
             that you have
@@ -118,7 +118,7 @@
         </div>
         <div id="key-features">
             <h1>Key Features</h1>
-            <ol>
+            <ol class="rounded-5 p-md-3">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6 my-auto">
@@ -157,7 +157,7 @@
 
             </ol>
         </div>
-        <div>
+        <div class="mt-5">
             <h1>Watch Our Pitch Video!</h1>
             <iframe class="mx-auto" width="560" height="315"
                 src="https://www.youtube.com/embed/Bt_3qnpRLu4?si=EWW1WpY_vswnc-Y1" title="YouTube video player"
