--- a/login.html
+++ b/login.html
@@ -45,7 +45,7 @@
     <!------------------------------>
 
     <!-- our own navbar goes here -->
-    <nav id="navbarPlaceholder"></nav>
+    <nav id="navbarDuringLogin"></nav>
 
     <!-- the body of your page goes here -->
     <!-- stuff -->
