--- a/login.html
+++ b/login.html
@@ -49,8 +49,8 @@
 
     <!-- the body of your page goes here -->
     <!-- stuff -->
-    <div class="container">
-        <h1>Let's Login!</h1>
+    <div class="container mt-5">
+        <h1 class="text-center">Let's Login!</h1>
     </div>
     <div id="firebaseui-auth-container"></div>
     <div id="loader">Loading...</div>
