Add logout functionality

--- a/main.html
+++ b/main.html
@@ -91,7 +91,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="login.html" role="button">
+                        <a class="nav-link" id="signOut" href="index.html" role="button">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
                                 stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="28"
                                 height="28" stroke-width="1">
@@ -257,9 +257,6 @@
     <script src="./scripts/firebaseAPI_Team05.js"></script>
     <script src="./scripts/skeleton.js"></script>
     <script src="./scripts/script.js"></script>
-    <script>
-        logout(); //make sure user is logged out
-    </script>
 </body>
 
 </html>
