--- a/shoppinglist.html
+++ b/shoppinglist.html
@@ -116,88 +116,12 @@
         
     </div>
 
-    <div class="container mx-auto">
-        <div class="row d-flex justify-content-center align-items-center">
-            <div class="col-md-3 mb-4">
-                <div class="card mx-auto" style="width: 18rem">
-                    <img src="./images/chicken.png" class="card-img-top" alt="..."
-                        style="height: 200px; width: 100%; object-fit: cover" />
-                    <div class="card-body">
-                        <h5 class="card-title text-center">Chicken</h5>
-                        <ul class="card-text">
-                            <li>Store Location: Save on Foods</li>
-                            <li>Original Price: $7.99 per lb</li>
-                            <li>Deal Offer: $5.99 per lb</li>
-                        </ul>
-                        <div class="d-flex justify-content-center">
-                            <a href="#" class="btn btn-success">Buy Now</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-3 mb-4">
-                <div class="card mx-auto" style="width: 18rem">
-                    <img src="./images/potato.png" class="card-img-top" alt="..."
-                        style="height: 200px; width: 100%; object-fit: cover" />
-                    <div class="card-body">
-                        <h5 class="card-title text-center">Potatoes</h5>
-                        <ul class="card-text">
-                            <li>Store Location: Walmart</li>
-                            <li>Original Price: $2.99 per bag</li>
-                            <li>Deal Offer: $2.49 per bag</li>
-                        </ul>
-                        <div class="d-flex justify-content-center">
-                            <a href="#" class="btn btn-success">Buy Now</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-3 mb-4">
-                <div class="card mx-auto" style="width: 18rem">
-                    <img src="./images/milk.png" class="card-img-top" alt="..."
-                        style="height: 200px; width: 100%; object-fit: cover" />
-                    <div class="card-body">
-                        <h5 class="card-title text-center">Milk</h5>
-                        <ul class="card-text">
-                            <li>Store Location: Costco</li>
-                            <li>Original Price: $2.19 per lb</li>
-                            <li>Deal Offer: $1.99 per gallon</li>
-                        </ul>
-                        <div class="d-flex justify-content-center">
-                            <a href="#" class="btn btn-success">Buy Now</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-3 mb-4">
-                <div class="card mx-auto" style="width: 18rem">
-                    <img src="./images/cabbage.png" class="card-img-top" alt="..."
-                        style="height: 200px; width: 100%; object-fit: cover" />
-                    <div class="card-body">
-                        <h5 class="card-title text-center">Cabbage</h5>
-                        <ul class="card-text">
-                            <li>Store Location: Urban Fare</li>
-                            <li>Original Price: $3.99 each</li>
-                            <li>Deal Offer: $3.49 each</li>
-                        </ul>
-                        <div class="d-flex justify-content-center">
-                            <a href="#" class="btn btn-success">Buy Now</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <footer class="navbar fixed-bottom d-md-none bg-success">
         <div class="container-fluid d-flex justify-content-center">
             <div class="d-flex justify-content-center" id="navbarNavAltMarkup">
                 <div class="d-flex text-white">
                     <a class="nav-link active d-flex flex-column pe-5 align-items-center" aria-current="page"
-                        href="#"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+                        href="index.html"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="45" height="45"
                             stroke-width="1">
                             <path d="M5 12l-2 0l9 -9l9 9l-2 0"></path>
@@ -206,7 +130,7 @@
                         </svg>
                         Home
                     </a>
-                    <a class="nav-link d-flex flex-column align-items-center" href="#">
+                    <a class="nav-link d-flex flex-column align-items-center" href="shoppinglist.html">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                             stroke-linecap="round" stroke-linejoin="round" width="45" height="45" stroke-width="1.5">
                             <path d="M9 5h-2a2 2 0 0 0 -2 2v12a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-12a2 2 0 0 0 -2 -2h-2">
@@ -219,7 +143,7 @@
                         </svg>
                         Shopping List
                     </a>
-                    <a class="nav-link d-flex flex-column px-5 align-items-center" href="#">
+                    <a class="nav-link d-flex flex-column px-5 align-items-center" href="favourites.html">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                             stroke-linecap="round" stroke-linejoin="round" width="45" height="45" stroke-width="1">
                             <path d="M19.5 12.572l-7.5 7.428l-7.5 -7.428a5 5 0 1 1 7.5 -6.566a5 5 0 1 1 7.5 6.572">
@@ -227,7 +151,7 @@
                         </svg>
                         Favourites
                     </a>
-                    <a class="nav-link d-flex flex-column align-items-center" href="#">
+                    <a class="nav-link d-flex flex-column align-items-center" href="profile.html">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                             stroke-linecap="round" stroke-linejoin="round" width="45" height="45" stroke-width="1">
                             <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0"></path>
