--- a/favourites.html
+++ b/favourites.html
@@ -15,6 +15,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-------------------------------------------------------->
     <!-- Firebase 8 Library related CSS, JS, JQuery go here -->
     <!-------------------------------------------------------->
@@ -108,100 +109,35 @@
     </nav>
     <!------------------------------>
 
-    <!-- <div class="px-4 py-5 my-5 text-center "
-        style="background-image: url('images/splash2.jpg'); background-size: cover; background-position: center;"> -->
-    <div class="mb-5 py-5 text-center splash">
-        <img class="d-block mx-auto mb-4" src="images/hound_white.png" alt="" width="128" height="128" />
-        <h1 class="display-5 text-white fw-bold">DealHound</h1>
-        <div class="col-lg-6 mx-auto">
-            <p class="lead mb-4 text-white">
-                Save time and money with our easy and simple deal hunting companion.
-            </p>
-            <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                <button type="button" class="btn btn-success btn-lg px-4 gap-3">
-                    Get Started
-                </button>
-
-                <a class="btn btn-light btn-lg px-4" href="./aboutus.html">About Us</a>
-            </div>
+    <div class="container my-5">
+            <h2 class="text-center">Favourites</h2>
+            <ul class="list-group" id="favourites-list">
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    Apple
+                    <button class="btn like-btn" onclick="toggleFavourite(this)">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="heart-icon">
+                            <path d="M12 21l-1.5-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.5 11.18L12 21z"></path>
+                        </svg>
+                    </button>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    Bread
+                    <button class="btn like-btn" onclick="toggleFavourite(this)">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="heart-icon">
+                            <path d="M12 21l-1.5-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.5 11.18L12 21z"></path>
+                        </svg>
+                    </button>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    Milk
+                    <button class="btn like-btn" onclick="toggleFavourite(this)">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="heart-icon">
+                            <path d="M12 21l-1.5-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.5 11.18L12 21z"></path>
+                        </svg>
+                    </button>
+                </li>
+            </ul>
         </div>
-    </div>
-
-    <div class="container mx-auto">
-        <div class="row d-flex justify-content-center align-items-center">
-            <div class="col-md-3 mb-4">
-                <div class="card mx-auto" style="width: 18rem">
-                    <img src="./images/chicken.png" class="card-img-top" alt="..."
-                        style="height: 200px; width: 100%; object-fit: cover" />
-                    <div class="card-body">
-                        <h5 class="card-title text-center">Chicken</h5>
-                        <ul class="card-text">
-                            <li>Store Location: Save on Foods</li>
-                            <li>Original Price: $7.99 per lb</li>
-                            <li>Deal Offer: $5.99 per lb</li>
-                        </ul>
-                        <div class="d-flex justify-content-center">
-                            <a href="#" class="btn btn-success">Buy Now</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-3 mb-4">
-                <div class="card mx-auto" style="width: 18rem">
-                    <img src="./images/potato.png" class="card-img-top" alt="..."
-                        style="height: 200px; width: 100%; object-fit: cover" />
-                    <div class="card-body">
-                        <h5 class="card-title text-center">Potatoes</h5>
-                        <ul class="card-text">
-                            <li>Store Location: Walmart</li>
-                            <li>Original Price: $2.99 per bag</li>
-                            <li>Deal Offer: $2.49 per bag</li>
-                        </ul>
-                        <div class="d-flex justify-content-center">
-                            <a href="#" class="btn btn-success">Buy Now</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-3 mb-4">
-                <div class="card mx-auto" style="width: 18rem">
-                    <img src="./images/milk.png" class="card-img-top" alt="..."
-                        style="height: 200px; width: 100%; object-fit: cover" />
-                    <div class="card-body">
-                        <h5 class="card-title text-center">Milk</h5>
-                        <ul class="card-text">
-                            <li>Store Location: Costco</li>
-                            <li>Original Price: $2.19 per lb</li>
-                            <li>Deal Offer: $1.99 per gallon</li>
-                        </ul>
-                        <div class="d-flex justify-content-center">
-                            <a href="#" class="btn btn-success">Buy Now</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-3 mb-4">
-                <div class="card mx-auto" style="width: 18rem">
-                    <img src="./images/cabbage.png" class="card-img-top" alt="..."
-                        style="height: 200px; width: 100%; object-fit: cover" />
-                    <div class="card-body">
-                        <h5 class="card-title text-center">Cabbage</h5>
-                        <ul class="card-text">
-                            <li>Store Location: Urban Fare</li>
-                            <li>Original Price: $3.99 each</li>
-                            <li>Deal Offer: $3.49 each</li>
-                        </ul>
-                        <div class="d-flex justify-content-center">
-                            <a href="#" class="btn btn-success">Buy Now</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <footer class="navbar fixed-bottom d-md-none bg-success">
         <div class="container-fluid d-flex justify-content-center">
@@ -257,6 +193,7 @@
     <script src="./scripts/firebaseAPI_Team05.js"></script>
     <script src="./scripts/skeleton.js"></script>
     <script src="./scripts/script.js"></script>
+    <script src="./scripts/favourite_script.js"></script>
 </body>
 
 </html>
