--- a/aboutus.html
+++ b/aboutus.html
@@ -81,7 +81,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="login.html">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
                                 stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="28"
                                 height="28" stroke-width="1">
@@ -96,7 +96,7 @@
             </div>
         </div>
     </nav>
-    <main id="aboutus" class="mx-auto">
+    <main id="aboutus" class="mx-auto p-5">
         <h1 id="mission-header" class="text-center text-success fw-bold mb-4">Finding deals for you</h1>
         <p>DealHound simplifies the grocery shopping experience by collecting and curating
             deals from multiple retailers in one place. Add your grocery list and preferences, and our app will ensure
@@ -167,13 +167,62 @@
         </div>
 
     </main>
-
+    <!-- our own footer goes here-->
+    <footer class="navbar fixed-bottom d-md-none bg-success">
+        <div class="container-fluid d-flex justify-content-center">
+            <div class="d-flex justify-content-center" id="navbarNavAltMarkup">
+                <div class="d-flex text-white">
+                    <a class="nav-link active d-flex flex-column pe-5 align-items-center" aria-current="page"
+                        href="#"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="45" height="45"
+                            stroke-width="1">
+                            <path d="M5 12l-2 0l9 -9l9 9l-2 0"></path>
+                            <path d="M5 12v7a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-7"></path>
+                            <path d="M10 12h4v4h-4z"></path>
+                        </svg>
+                        Home
+                    </a>
+                    <a class="nav-link d-flex flex-column align-items-center" href="#">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-linecap="round" stroke-linejoin="round" width="45" height="45" stroke-width="1.5">
+                            <path d="M9 5h-2a2 2 0 0 0 -2 2v12a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-12a2 2 0 0 0 -2 -2h-2">
+                            </path>
+                            <path d="M9 3m0 2a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v0a2 2 0 1 1 -2 2h-2a2 2 0 0 1 -2 -2z">
+                            </path>
+                            <path d="M9 14h.01"></path>
+                            <path d="M9 17h.01"></path>
+                            <path d="M12 16l1 1l3 -3"></path>
+                        </svg>
+                        Shopping List
+                    </a>
+                    <a class="nav-link d-flex flex-column px-5 align-items-center" href="#">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-linecap="round" stroke-linejoin="round" width="45" height="45" stroke-width="1">
+                            <path d="M19.5 12.572l-7.5 7.428l-7.5 -7.428a5 5 0 1 1 7.5 -6.566a5 5 0 1 1 7.5 6.572">
+                            </path>
+                        </svg>
+                        Favourites
+                    </a>
+                    <a class="nav-link d-flex flex-column align-items-center" href="#">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-linecap="round" stroke-linejoin="round" width="45" height="45" stroke-width="1">
+                            <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0"></path>
+                            <path d="M12 10m-3 0a3 3 0 1 0 6 0a3 3 0 1 0 -6 0"></path>
+                            <path d="M6.168 18.849a4 4 0 0 1 3.832 -2.849h4a4 4 0 0 1 3.834 2.855"></path>
+                        </svg>
+                        Profile</a>
+                </div>
+            </div>
+        </div>
+    </footer>
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
     <!---------------------------------------------->
 
     <!-- Link to scripts of your own -->
-    <!-- <script src="./scripts/script.js"></script> -->
+    <script src="./scripts/firebaseAPI_Team05.js"></script>
+    <script src="./scripts/skeleton.js"></script>
+    <script src="./scripts/script.js"></script>
 </body>
 
 </html>
