Update card template classes

--- a/main.html
+++ b/main.html
@@ -39,9 +39,9 @@
             <h5 class="card-item">Card title</h5>
             <div class="card-body-template mt-3">
                 <p><span class="fw-semibold">Deal: </span><span class="card-deal"></span></p>
-                <p><span class="fw-semibold">Price: </span><span class="card-deal"></span></p>
-                <p><span class="fw-semibold">Retailer: </span><span class="card-deal"></span></p>
-                <p><span class="fw-semibold">End Date: </span><span class="card-deal"></span></p>
+                <p><span class="fw-semibold">Price: </span><span class="card-price"></span></p>
+                <p><span class="fw-semibold">Retailer: </span><span class="card-retailer"></span></p>
+                <p><span class="fw-semibold">End Date: </span><span class="card-end-date"></span></p>
             </div>
         </div>
     </template>
