Update layout for shoppinglist page

--- a/shoppinglist.html
+++ b/shoppinglist.html
@@ -266,9 +266,7 @@
             </div>
           </div>
 
-          <div class="container my-5 d-flex flex-row ">
-            
-          </div>
+          <div class="container my-5 d-flex flex-row"></div>
         </div>
         <!-- end right column -->
       </div>
