Update grid layout for better manipulation

--- a/shoppinglist.html
+++ b/shoppinglist.html
@@ -166,8 +166,9 @@
     <!------------------------------>
 
     <!-- Main container -->
-    <div class="container d-flex flex-column flex-wrap my-4 mx-auto">
-      <div class="row">
+    <!-- <div class="container d-flex flex-column flex-wrap my-4 mx-auto"> -->
+    <div class="row">
+      <div class="col-12 col-md-6">
         <!-- left column -->
         <div class="d-flex flex-column justify-content-start">
           <h4 class="text-center mt-1 mb-2 text-muted">My List</h4>
@@ -246,9 +247,11 @@
             <ul class="list-group" id="shoppingList"></ul>
           </div>
         </div>
-
+      </div>
+      <!-- end left column -->
+      <div class="col-12 col-md-6">
         <!-- right column (Sign In Box) -->
-        <div class="col-md-5 d-flex flex-column justify-content-start">
+        <div class="col-12">
           <div id="signInBox" class="my-5">
             <div class="row justify-content-center">
               <div class="col-md-10">
